[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Main.gd" type="Script" id=1]
[ext_resource path="res://src/TextBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/audio/mined-mind-audio.ogg" type="AudioStream" id=3]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( -23.2434, 4.83697 )
scale = Vector2( 1.0817, 1.23714 )
color = Color( 0.403922, 0.368627, 0.313726, 1 )
polygon = PoolVector2Array( -23.5234, 602.329, 1224.51, 602.329, 1224.51, -24.1178, -23.5234, -24.1178 )

[node name="TextBox" parent="." instance=ExtResource( 2 )]
position = Vector2( 846.968, 73 )
polygon = PoolVector2Array( 50, 50, 600, 50, 600.032, 150, 600.032, 650, 50, 650 )

[node name="ChangeStateTimer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[node name="GameOverDelayTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="page_completed" from="TextBox" to="." method="_on_TextBox_page_completed"]
[connection signal="timeout" from="ChangeStateTimer" to="." method="_on_ChangeStateTimer_timeout"]
[connection signal="timeout" from="GameOverDelayTimer" to="." method="_on_GameOverDelayTimer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
